--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,22 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;
+  --mono-font-family: Monaco, Menlo, Consolas, monospace;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: var(--mono-font-family);
+  margin: 0;
+  padding: 20px;
+}
+
+td {
+  padding-right: 40px;
+}
+
+td:nth-of-type(1) {
+  text-align: right;
+}
+
+td:nth-of-type(4) {
+  text-align: right;
 }
