--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+.guitar {
+  display: grid;
+  row-gap: 18px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.guitar-string {
+  column-gap: 4px;
+  display: grid;
+  grid-template-columns: repeat(calc(var(--guitar-frets) + 1), 30px);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.guitar-note {
   align-items: center;
+  background: rgb(255 255 255);
+  border-radius: 999px;
+  border: 1px solid rgb(0 0 0);
+  display: inline-flex;
+  font-weight: 700;
+  height: 30px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  line-height: 1;
+  text-align: center;
+  width: 30px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.guitar-note--accidental {
+  background: rgb(153 153 153);
+  border-color: transparent;
+  color: rgb(255 255 255);
+  font-size: 12px;
 }
